# clang

./: .gitignore  ClangBNI.mk  Makefile  clang-merge-list.txt  clang.1  clang.order  llvm-cov.1  llvm-merge-list.txt  llvm-profdata.1  merge-lipo
order-files/: gen-clang-order-data
order-files/inputs/: 403.gcc__combine.c  Cocoa_Prefix.h  JavaScriptCore__Interpreter.cpp  OmniGroupFrameworks__NSBezierPath-OAExtensions.m  trivial-input.c  trivial-input.cpp  trivial-input.m
src/: CMakeLists.txt  Makefile  Makefile.config.in  Makefile.rules  configure
src/autoconf/: aclocal.m4  configure.ac
src/autoconf/autom4te.cache/: requests  traces.0  traces.1
src/autom4te.cache/: output.0  requests  traces.0
src/cmake/: config-ix.cmake
src/cmake/modules/: AddLLVM.cmake  HandleLLVMOptions.cmake  LLVMConfig.cmake.in
src/docs/: AliasAnalysis.html  BitCodeFormat.html  CodeGenerator.html  CodingStandards.html  DeveloperPolicy.html  ExceptionHandling.html  GetElementPtr.html  GettingStarted.html  GettingStartedVS.html  HowToReleaseLLVM.html  LangRef.html  LangRef.rst  Passes.html  ProgrammersManual.html  ReleaseNotes.html  SourceLevelDebugging.html  SourceLevelDebugging.rst  TableGenFundamentals.html  TestingGuide.html  WritingAnLLVMBackend.html  WritingAnLLVMPass.html  conf.py
src/docs/CommandGuide/: FileCheck.rst
src/docs/tutorial/: LangImpl3.html  LangImpl4.html  LangImpl5.html  LangImpl6.html  LangImpl7.html  LangImpl8.rst  OCamlLangImpl7.html
src/examples/ExceptionDemo/: ExceptionDemo.cpp
src/include/llvm/: DIBuilder.h  DebugInfo.h  InitializePasses.h  LinkAllPasses.h
src/include/llvm-c/: Core.h  ProfileData.h  lto.h
src/lib/: CMakeLists.txt  LLVMBuild.txt  Makefile
src/lib/Analysis/: BasicAliasAnalysis.cpp  BlockFrequencyInfo.cpp  BranchProbabilityInfo.cpp  CMakeLists.txt  ConstantFolding.cpp  CostModel.cpp  DIBuilder.cpp  DebugInfo.cpp  DependenceAnalysis.cpp  IVUsers.cpp  InstructionSimplify.cpp  Lint.cpp  LoopAccessAnalysis.cpp  LoopPass.cpp  MemoryDependenceAnalysis.cpp  ScalarEvolution.cpp  ScalarEvolutionExpander.cpp  TargetLibraryInfo.cpp  TargetTransformInfo.cpp  TypeBasedAliasAnalysis.cpp  ValueTracking.cpp
src/lib/AsmParser/: LLLexer.cpp  LLParser.cpp  LLParser.h  LLToken.h
src/lib/CodeGen/: BasicTargetTransformInfo.cpp  CMakeLists.txt  CalcSpillWeights.cpp  CodeGenPrepare.cpp  DeadMachineInstructionElim.cpp  GCRootLowering.cpp  GlobalMerge.cpp  IfConversion.cpp  InlineSpiller.cpp  LLVMTargetMachine.cpp  LexicalScopes.cpp  LiveDebugVariables.cpp  LiveDebugVariables.h  LiveInterval.cpp  LiveIntervalAnalysis.cpp  MachineBasicBlock.cpp  MachineCopyPropagation.cpp  MachineFunction.cpp  MachineInstr.cpp  MachineLICM.cpp  MachineRegisterInfo.cpp  MachineSSAUpdater.cpp  MachineScheduler.cpp  MachineTraceMetrics.cpp  MachineVerifier.cpp  Passes.cpp  PeepholeOptimizer.cpp  PrologEpilogInserter.cpp  RegAllocFast.cpp  RegAllocGreedy.cpp  RegAllocPBQP.cpp  RegisterCoalescer.cpp  ScheduleDAGInstrs.cpp  SpillPlacement.cpp  SplitKit.cpp  StackColoring.cpp  StackMaps.cpp  TargetInstrInfo.cpp  TargetLoweringBase.cpp  TargetLoweringObjectFileImpl.cpp  (+1 more)
src/lib/DebugInfo/: DWARFContext.cpp
src/lib/ExecutionEngine/: ExecutionEngine.cpp
src/lib/IR/: AsmWriter.cpp  Attributes.cpp  AutoUpgrade.cpp  CMakeLists.txt  ConstantFold.cpp  Constants.cpp  Core.cpp  DIBuilder.cpp  DataLayout.cpp  DebugInfo.cpp  DebugInfoMetadata.cpp  DiagnosticInfo.cpp  Function.cpp  GCOV.cpp  Globals.cpp  InlineAsm.cpp  Instructions.cpp  LLVMContext.cpp  LLVMContextImpl.cpp  LLVMContextImpl.h  LegacyPassManager.cpp  Mangler.cpp  Module.cpp  PassManager.cpp  Type.cpp  Value.cpp  Verifier.cpp
src/tools/: CMakeLists.txt
src/tools/clang/tools/clang-check/: CMakeLists.txt  ClangCheck.cpp  Makefile
src/tools/clang/tools/clang-service/: CMakeLists.txt  README.txt
src/tools/clang/tools/clang-service/lib/: CMakeLists.txt  Info.plist
src/tools/clang/tools/clang-service/lib/Core/: C-API.cpp  CMakeLists.txt  Service.cpp
src/tools/clang/tools/clang-service/lib/Support/: CMakeLists.txt  UID.cpp  Value.cpp
src/tools/clang/tools/clang-service/lib/XPC/: CMakeLists.txt  Client.cpp  Service.cpp  XPC.cpp
src/tools/clang/tools/clang-service/tools/: CMakeLists.txt
src/tools/clang/tools/clang-service/tools/service/: CMakeLists.txt  Info.plist  service.cpp
src/tools/clang/tools/clang-service/unittests/: C-API.cpp  CMakeLists.txt  CodeCompletion.cpp  Communication.cpp  Indexing.cpp  Serialization.cpp
src/utils/: get-llvm-debug-metadata-version-offset.sh
static-order-files/armv7/: clang.order
static-order-files/i386/: clang.order
static-order-files/x86_64/: clang.order
(+1212 files in other folders)
